--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-hello world
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+
+    <style>
+        [contenteditable] {
+            outline: 0px solid transparent;
+            
+        }
+
+        .text-area > div > div:hover{
+            background-color : #f3f3f3;
+        }
+    </style>
+</head>
+<body>
+    <div class="text-area">
+        <div contenteditable="true" id="top-text-area"></div>
+    </div>
+</body>
+</html>
