--- a/index.html
+++ b/index.html
@@ -9,17 +9,20 @@
     <style>
         [contenteditable] {
             outline: 0px solid transparent;
-            
         }
 
-        .text-area > div > div:hover{
+        .top-text-area > div:hover{
             background-color : #f3f3f3;
         }
+        
     </style>
+
+    <script>
+    </script>
 </head>
 <body>
     <div class="text-area">
-        <div contenteditable="true" id="top-text-area"></div>
+        <div contenteditable="true" class="top-text-area"></div>
     </div>
 </body>
 </html>
