--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 
     <style>
         [contenteditable] {
-            outline: 0px solid transparent;
+            outline: none;
         }
 
         .top-text-area > div:hover{
             background-color : #f3f3f3;
+            
         }
         
     </style>
