--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@
             [contenteditable]:empty:focus:before{
                 content: attr(placeholder);
                 color: gray;
+                cursor: text;
             }
 
             .editable-wrapper{
