로그인 & 회원가입 구현

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
             }
         </style>
 
-        <script src='/functions.js'></script>
-        <script src='/keyEvents.js'></script>
-        <script src='/mouseEvents.js'></script>
+        <script src='./functions.js'></script>
+        <script src='./keyEvents.js'></script>
+        <script src='./mouseEvents.js'></script>
         <script>
             window.onload = function(){
                 var div = createDiv();
